--- a/editor.html
+++ b/editor.html
@@ -895,6 +895,8 @@
 <!-- script src="libs/jszip/jszip.min.js"></script>
 <script src="libs/builder/plugin-jszip.js"></script -->
 
+<script src="/customize-editor.js"></script>	
+
 <script>
 $(document).ready(function() 
 {
@@ -915,32 +917,32 @@ $(document).ready(function()
 
 	Vvveb.Gui.init();
 	Vvveb.FileManager.init();
-	Vvveb.FileManager.addPages(
-	[
-		{name:"narrow-jumbotron", title:"Jumbotron",  url: "demo/narrow-jumbotron/index.html", assets: ['demo/narrow-jumbotron/narrow-jumbotron.css']},
-		{name:"landing-page", title:"Landing page",  url: "demo/startbootstrap-landing-page/index.html", assets: ['demo/startbootstrap-landing-page/css/landing-page.min.css']},
-		{name:"album", title:"Album",  url: "demo/album/index.html", assets: ['demo/album/album.css']},
-		{name:"blog", title:"Blog",  url: "demo/blog/index.html", assets: ['demo/blog/blog.css']},
-		{name:"carousel", title:"Carousel",  url: "demo/carousel/index.html", assets: ['demo/carousel/carousel.css']},
-		{name:"offcanvas", title:"Offcanvas",  url: "demo/offcanvas/index.html", assets: ['demo/offcanvas/offcanvas.css','demo/offcanvas/offcanvas.js']},
-		{name:"pricing", title:"Pricing",  url: "demo/pricing/index.html", assets: ['demo/pricing/pricing.css']},
-		{name:"product", title:"Product",  url: "demo/product/index.html", assets: ['demo/product/product.css']},
-		{name:"ecommerce", title:"eCommerce homepage",  url: "ecommerce_demo/index.html"},
-		//uncomment php code below and rename file to .php extension to load saved html files in the editor
-		/*
-		<?php 
-		   $htmlFiles = glob("*.html");
-		   foreach ($htmlFiles as $file) { 
-			   if (in_array($file, array('new-page-blank-template.html', 'editor.html'))) continue;//skip template files
-			   $pathInfo = pathinfo($file);
-		?>
-		{name:"<?php echo ucfirst($pathInfo['filename']);?>", title:"<?php echo ucfirst($pathInfo['filename']);?>",  url: "<?php echo $pathInfo['basename'];?>"},
-		<?php } ?>
-		*/
-		{name:"test", title:"test",  url: "http://vvveb_install.givan.ro/"},
-	]);
+	// Vvveb.FileManager.addPages(
+	// [
+	// 	{name:"narrow-jumbotron", title:"Jumbotron",  url: "demo/narrow-jumbotron/index.html", assets: ['demo/narrow-jumbotron/narrow-jumbotron.css']},
+	// 	{name:"landing-page", title:"Landing page",  url: "demo/startbootstrap-landing-page/index.html", assets: ['demo/startbootstrap-landing-page/css/landing-page.min.css']},
+	// 	{name:"album", title:"Album",  url: "demo/album/index.html", assets: ['demo/album/album.css']},
+	// 	{name:"blog", title:"Blog",  url: "demo/blog/index.html", assets: ['demo/blog/blog.css']},
+	// 	{name:"carousel", title:"Carousel",  url: "demo/carousel/index.html", assets: ['demo/carousel/carousel.css']},
+	// 	{name:"offcanvas", title:"Offcanvas",  url: "demo/offcanvas/index.html", assets: ['demo/offcanvas/offcanvas.css','demo/offcanvas/offcanvas.js']},
+	// 	{name:"pricing", title:"Pricing",  url: "demo/pricing/index.html", assets: ['demo/pricing/pricing.css']},
+	// 	{name:"product", title:"Product",  url: "demo/product/index.html", assets: ['demo/product/product.css']},
+	// 	{name:"ecommerce", title:"eCommerce homepage",  url: "ecommerce_demo/index.html"},
+	// 	//uncomment php code below and rename file to .php extension to load saved html files in the editor
+	// 	/*
+	// 	<?php 
+	// 	   $htmlFiles = glob("*.html");
+	// 	   foreach ($htmlFiles as $file) { 
+	// 		   if (in_array($file, array('new-page-blank-template.html', 'editor.html'))) continue;//skip template files
+	// 		   $pathInfo = pathinfo($file);
+	// 	?>
+	// 	{name:"<?php echo ucfirst($pathInfo['filename']);?>", title:"<?php echo ucfirst($pathInfo['filename']);?>",  url: "<?php echo $pathInfo['basename'];?>"},
+	// 	<?php } ?>
+	// 	*/
+	// 	{name:"test", title:"test",  url: "http://vvveb_install.givan.ro/"},
+	// ]);
 	
-	Vvveb.FileManager.loadPage("narrow-jumbotron");
+	// Vvveb.FileManager.loadPage("narrow-jumbotron");
 });
 </script>
 </body>
